# T-Stick

./: .gitignore  .gitmodules  README.md  Release.key.3
3D_printing/: ESP32_cap.stl  IMU_bed.stl  T-Stick_battery_cap(genetic).stl  T-Stick_capsense_bed.stl  T-Stick_dummy_bed.stl  T-Stick_esp_pin.stl  T-Stick_imu_bed.stl  TinyPico_pole.stl  Trill_bed.stl  battery cover_.stl  battery_cap.stl  bed.FCStd  bed_capsense.stp  bed_dummy.stp  bed_tinypico_USBC.stl  bed_tinypico_microUSB.stp  bed_tinypico_usbc.FCStd  cap-new-tinypico.stl  cap_battery_body.stp  cap_battery_cover.stp  cap_tinypico_USBC.stl  cap_tinypico_microUSB.stl  cap_tinypico_microusb.FCStd  cap_tinypico_usbc.FCStd  dummy_bed.stl  pin_scaled_0.99.stl  pole_tinypico.stl  regular_poles.stl  small pin.stl
3D_printing/T-Stick 4GW/: bed_Trill.stl  bed_capsense.stp  bed_tinypico_microusb.stl
3D_printing/T-Stick 5GW/: blank-endcap.step  cap-closer.step  esp32-bed.step  esp32-capcloser.step  esp32-endcap.step  liion-capcloser.step  liion-endcap.step  touch-board-bed.step  touch-board-door.step
Docs/: Firmware_update_instructions.md  IDMIL_T-Sticks.xlsx  OSC.md  README.md  T-Stick_2GW_Connecting_Guide(v1.2).md  T-Stick_2GW_Connecting_Guide(v1.3).md  T-Stick_2GW_building_instructions(trill).md  T-Stick_2GW_building_instructions.md
Docs/MUMT620-t-stick_files/: AuthenticationService.Authenticate  helpers.css  (+11 more)
Eagle Libraries/: Capsense16_25092018.brd  Capsense16_25092018.sch  T-Stick.lbr  T-Stick.lbr.old
TStick-arduino/: Capsense.ino  IMU.ino  OSC.ino  TStick-arduino.ino  TouchGestures.ino  data.ino  esp32_arduino_FW200422.ino  fs_json.ino  instrument.ino  libmapper.ino
TStick-idf/: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
TStick-idf/components/arduino-libraries/: CMakeLists.txt  component.mk
TStick-idf/main/: CMakeLists.txt  Capsense.cpp  IMU.cpp  OSC.cpp  TStick-idf.cpp  TStick.h  WiFi.cpp  component.mk  data.cpp  fs_json.cpp  instrument.cpp  libmapper.cpp  main.cpp
Test_config/: README.md
conversion box/: README.md  libmapper_bridge.py  libmapper_test.py  tstick_bridge.py
firmware/: Capsense.ino  IMU.ino  OSC.ino  README.md  WiFi.ino  data.ino  firmware.ino  fs_json.ino  libmapper.ino  platformio.ini
firmware (copy)/: platformio.ini
firmware.seila/: platformio.ini
hardware/: Capsense16_25092018.brd  Capsense16_25092018.sch
(+752 files in other folders)
